Colour contrast fixed

--- a/_includes/main.scss
+++ b/_includes/main.scss
@@ -9,9 +9,9 @@ $spacing-unit:     30px;
 
 $text-color:       #111;
 $background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$brand-color:      #0000e0;
 
-$grey-color:       #828282;
+$grey-color:       lighten(#000000, 40%);;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
